--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "jsx": "preserve",
+    "jsx": "react",
     "experimentalDecorators": true,
     "module": "commonjs",
     "baseUrl": "./",
