--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "ai": "^2.1.32",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai-edge": "^1.2.2"
+    "openai-edge": "^1.2.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
