--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "openai-node-app",
   "version": "0.2.0",
   "main": "src/index.js",
-  "license":"Apache-2.0",
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "node scripts/start.js development",
     "build": "node scripts/start.js production",
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
     "@svgr/webpack": "^8.0.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/express": "^4.17.17",
     "@types/lodash-es": "4.17.6",
     "@types/react": "18.0.27",
@@ -40,6 +41,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.4.12",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
@@ -47,16 +49,21 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.12.0",
     "glob-all": "3.3.1",
     "html-webpack-plugin": "5.5.0",
     "less": "4.1.3",
     "less-loader": "11.1.0",
     "mini-css-extract-plugin": "2.7.2",
+    "postcss": "^8.4.21",
     "postcss-loader": "7.0.2",
     "prettier": "^2.8.4",
     "purgecss-webpack-plugin": "5.0.0",
     "react-refresh": "0.14.0",
     "style-loader": "3.3.1",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.5",
     "terser-webpack-plugin": "5.3.6",
     "thread-loader": "3.0.4",
     "typescript": "4.9.5",
@@ -65,16 +72,13 @@
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
     "webpack-merge": "5.8.0",
-    "webpackbar": "^5.0.2",
-    "@tailwindcss/typography": "^0.5.9",
-    "eslint-config-next": "13.4.12",
-    "eslint-plugin-tailwindcss": "^3.12.0",
-    "postcss": "^8.4.21",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.1",
-    "tailwindcss-animate": "^1.0.5"
+    "webpackbar": "^5.0.2"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "@cfcs/core": "^0.1.0",
+    "@daybrush/utils": "^1.13.0",
+    "@icon-park/react": "^1.4.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -84,30 +88,35 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@ant-design/icons": "^5.1.4",
-    "@cfcs/core": "^0.1.0",
-    "@daybrush/utils": "^1.13.0",
-    "@icon-park/react": "^1.4.2",
     "@scena/matrix": "^1.1.1",
     "@scena/react-guides": "0.22.3",
     "@szhsin/react-menu": "^4.0.0",
+    "@types/draft-js": "^0.11.12",
     "ahooks": "^3.7.8",
+    "ai": "^2.1.6",
     "antd": "4.24.7",
     "axios": "1.3.2",
+    "class-variance-authority": "^0.7.0",
     "classnames": "2.3.2",
+    "clsx": "^2.0.0",
+    "draft-js": "^0.11.7",
     "echarts": "5.4.1",
+    "focus-trap-react": "^10.1.1",
     "hastscript": "^6.0.0",
     "keycon": "1.4.0",
     "lodash-es": "4.17.21",
     "mitt": "3.0.0",
     "moveable-helper": "0.4.0",
+    "nanoid": "^4.0.2",
     "rc-select": "^14.4.3",
     "rc-upload": "^4.3.4",
     "rc-util": "^5.30.0",
     "react": "18.2.0",
     "react-color": "2.18.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-infinite-viewer": "0.20.0",
+    "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
     "react-moveable": "0.46.1",
     "react-router-dom": "6.8.1",
@@ -117,15 +126,8 @@
     "react-textarea-autosize": "^8.4.1",
     "react-use": "17.4.0",
     "react-window": "1.8.9",
-    "scenejs": "1.9.4",
-    "ai": "^2.1.6",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "focus-trap-react": "^10.1.1",
-    "nanoid": "^4.0.2",
-    "react-hot-toast": "^2.4.1",
-    "react-intersection-observer": "^9.4.4",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "scenejs": "1.9.4"
   }
 }
