--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "openai-node-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/main.js",
+  "name": "openai-node",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "dev": "nodemon src/main.js",
-    "start": "node src/main.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ai": "^2.1.32",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "openai-edge": "^1.2.2",
-    "ws": "^8.13.0"
+    "dev": "nodemon ./scripts/start",
+    "start": "nodemon ./scripts/start"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "ai": "^2.1.32",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "openai-edge": "^1.2.2",
+    "ws": "^8.13.0"
   }
 }
