--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "ai": "^2.1.32",
+    "cookie": "^0.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "langchain": "^0.0.123",
     "morgan": "~1.9.1",
+    "nanoid": "^4.0.2",
     "openai-edge": "^1.2.2",
     "ws": "^8.13.0"
   }
