--- a/learn-langchain/package.json
+++ b/learn-langchain/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./scripts/start",
-    "start": "nodemon ./scripts/start"
+    "dev": "ts-node-dev src/app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.6.1",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/morgan": "^1.9.5"
   },
   "dependencies": {
     "ai": "^2.1.32",
@@ -18,10 +19,16 @@
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "langchain": "^0.0.123",
+    "langchain": "^0.0.150",
     "morgan": "~1.9.1",
     "nanoid": "^4.0.2",
     "openai-edge": "^1.2.2",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.17",
+    "typescript": "^5.2.2",
     "ws": "^8.13.0"
   }
 }
