--- a/learn-langchain/package.json
+++ b/learn-langchain/package.json
@@ -6,10 +6,10 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.6.1",
     "@types/cookie-parser": "^1.4.4",
-    "@types/morgan": "^1.9.5"
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.5",
+    "@types/node": "^20.6.1"
   },
   "dependencies": {
     "ai": "^2.1.32",
@@ -29,6 +29,8 @@
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.17",
     "typescript": "^5.2.2",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "zod": "^3.22.2",
+    "zod-to-json-schema": "^3.21.4"
   }
 }
