--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "langchain": "^0.0.123",
+    "loadsh": "^0.0.4",
     "morgan": "~1.9.1",
     "nanoid": "^4.0.2",
     "openai-edge": "^1.2.2",
